--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@
   'wght' 400,
   'GRAD' 0,
   'opsz' 48;
-  font-size: 54px;
+  font-size: 44px;
 }
 
 .btn {
@@ -25,6 +25,7 @@
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
+	font-size: 13px;
 }
 
 .roboto-mono::selection {
@@ -33,14 +34,49 @@
     text-shadow: none;
 }
 
-.setting-label {
+.settings {
 	text-align: left;
+}
+
+.settings-row {
+	display: flex;
+	margin: 5px;
+}
+
+.settings-btn {
+	margin-left: 5px;
+	margin-right: 5px;
+	padding-left: 15px;
+	padding-right: 15px;
+	width: 70px;
 }
 
 #user-interface {
 	background-color: rgba(0, 0, 0, 0);
 	position: absolute;
+	top: 70px;
 	margin: 15px;
+}
+
+#menu-icon {
+	position: absolute;
+	margin: 10px;
+}
+
+#shuffle-btn {
+	text-align: center;
+	width: 100%;
+	margin-top: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-color: black;
+	border-width: 2px;
+	border-style:solid;
+}
+
+#shuffle-btn:hover {
+	background-color: black;
+	color: white;
 }
 
 body {
@@ -48,6 +84,7 @@ body {
 }
 
 p {
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 120px;
 }
