--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48;
-  font-size: 44px;
-}
-
 .btn {
 	border-width: 0;
 	transition: 0.3s;
@@ -20,15 +8,15 @@
 	background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
-.roboto-mono {
-	font-family: "Roboto Mono", monospace;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
-	font-size: 13px;
+.roboto-mono-font {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: none;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 13px !important;
 }
 
-.roboto-mono::selection {
+.roboto-mono-font::selection {
     background: #000 !important;
     color: white !important;
     text-shadow: none !important;
@@ -70,7 +58,7 @@
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-color: black;
-	border-width: 2px;
+	border-width: 1.5px;
 	border-style: solid;
 }
 
@@ -81,6 +69,7 @@
 
 body {
 	margin: 0;
+	font-family: "Roboto Mono", monospace;
 }
 
 p {
