--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,13 @@
+.material-symbols-outlined {
+	font-variation-settings:
+	'FILL' 0,
+	'wght' 400,
+	'GRAD' 0,
+	'opsz' 48;
+	font-size: 44px;
+}
+
+
 .btn {
 	border-width: 0;
 	transition: 0.3s;
@@ -44,11 +54,13 @@
 	position: absolute;
 	top: 70px;
 	margin: 15px;
+	display: none;
 }
 
 #menu-icon {
 	position: absolute;
 	margin: 10px;
+
 }
 
 #shuffle-btn {
