--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,6 +34,9 @@
 
 .settings {
 	text-align: left;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.5);
+	backdrop-filter: blur(8px);
 }
 
 .settings-row {
@@ -53,7 +56,7 @@
 	background-color: rgba(0, 0, 0, 0);
 	position: absolute;
 	top: 70px;
-	margin: 15px;
+	margin: 10px;
 	display: none;
 }
 
