--- a/src/css/index.css
+++ b/src/css/index.css
@@ -86,6 +86,22 @@
 	color: white !important;
 }
 
+#reset-btn {
+	text-align: center;
+	width: 100%;
+	margin-top: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-color: black;
+	border-width: 1.5px;
+	border-style: solid;
+}
+
+#reset-btn:hover {
+	background-color: black !important;
+	color: white !important;
+}
+
 body {
 	margin: 0;
 	font-family: "Roboto Mono", monospace;
