--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,31 +1,31 @@
 .material-symbols-outlined {
-	font-variation-settings:
-	'FILL' 0,
-	'wght' 400,
-	'GRAD' 0,
-	'opsz' 48;
-	font-size: 44px;
-	color: black;
+    font-variation-settings:
+        "FILL" 0,
+        "wght" 400,
+        "GRAD" 0,
+        "opsz" 48;
+    font-size: 44px;
+    color: black;
 }
 
 .btn {
-	border-width: 0;
-	transition: 0.3s;
-	background-color: rgba(0, 0, 0, 0);
-	cursor: pointer;
+    border-width: 0;
+    transition: 0.3s;
+    background-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
 }
 
 .btn:hover {
-	background-color: rgba(0, 0, 0, 0.15) !important;
+    background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
 .roboto-mono-font {
-  font-family: "Roboto Mono", monospace;
-  font-optical-sizing: none;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 13px !important;
-  color: black;
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: none;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px !important;
+    color: black;
 }
 
 .roboto-mono-font::selection {
@@ -35,80 +35,79 @@
 }
 
 .settings {
-	text-align: left;
-	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.5);
-	backdrop-filter: blur(8px);
+    text-align: left;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(8px);
 }
 
 .settings-row {
-	display: flex;
-	margin: 5px;
-	color: black;
+    display: flex;
+    margin: 5px;
+    color: black;
 }
 
 .settings-btn {
-	margin-left: 5px;
-	margin-right: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-	width: 75px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 75px;
 }
 
 #user-interface {
-	background-color: rgba(0, 0, 0, 0);
-	position: absolute;
-	top: 70px;
-	margin: 10px;
-	display: none;
-	color: black;
+    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    top: 70px;
+    margin: 10px;
+    display: none;
+    color: black;
 }
 
 #menu-icon {
-	position: absolute;
-	margin: 10px;
-
+    position: absolute;
+    margin: 10px;
 }
 
 #shuffle-btn {
-	text-align: center;
-	width: 100%;
-	margin-top: 5px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-color: black;
-	border-width: 1.5px;
-	border-style: solid;
+    text-align: center;
+    width: 100%;
+    margin-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-color: black;
+    border-width: 1.5px;
+    border-style: solid;
 }
 
 #shuffle-btn:hover {
-	background-color: black !important;
-	color: white !important;
+    background-color: black !important;
+    color: white !important;
 }
 
 #reset-btn {
-	text-align: center;
-	width: 100%;
-	margin-top: 5px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-color: black;
-	border-width: 1.5px;
-	border-style: solid;
+    text-align: center;
+    width: 100%;
+    margin-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-color: black;
+    border-width: 1.5px;
+    border-style: solid;
 }
 
 #reset-btn:hover {
-	background-color: black !important;
-	color: white !important;
+    background-color: black !important;
+    color: white !important;
 }
 
 body {
-	margin: 0;
-	font-family: "Roboto Mono", monospace;
+    margin: 0;
+    font-family: "Roboto Mono", monospace;
 }
 
 p {
-	margin-top: 5px;
-	margin-bottom: 5px;
-	width: 120px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 120px;
 }
